--- a/FodyPackaging/FodyPackaging.csproj
+++ b/FodyPackaging/FodyPackaging.csproj
@@ -4,7 +4,7 @@
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
     <Description>NuGet packaging Fody repositories</Description>
     <IncludeBuildOutput>false</IncludeBuildOutput>
-    <IsTool>true</IsTool>
+    <DevelopmentDependency>true</DevelopmentDependency>
   </PropertyGroup>
 
   <ItemGroup>
