--- a/FodyTasks/Fody.nuspec
+++ b/FodyTasks/Fody.nuspec
@@ -16,13 +16,13 @@
   </metadata>
 
   <files>
-    <file src=".\bin\$configuration$\net472\Fody.dll" target="netclassictask" />
+    <file src=".\bin\$configuration$\net472\FodyTasks.dll" target="netclassictask" />
     <file src="..\FodyHelpers\bin\$configuration$\netstandard2.0\FodyHelpers.dll" target="netclassictask" />
     <file src="..\FodyCommon\bin\$configuration$\net472\FodyCommon.dll" target="netclassictask" />
     <file src="..\FodyIsolated\bin\$configuration$\net472\FodyIsolated.dll" target="netclassictask" />
     <file src="..\cecil\Lib\$configuration$\net40\Mono*.*" target="netclassictask" />
 
-    <file src=".\bin\$configuration$\netstandard2.0\Fody.dll" target="netstandardtask" />
+    <file src=".\bin\$configuration$\netstandard2.0\FodyTasks.dll" target="netstandardtask" />
     <file src="..\FodyHelpers\bin\$configuration$\netstandard2.0\FodyHelpers.dll" target="netstandardtask" />
     <file src="..\FodyCommon\bin\$configuration$\netstandard2.0\FodyCommon.dll" target="netstandardtask" />
     <file src="..\FodyIsolated\bin\$configuration$\netstandard2.0\FodyIsolated.dll" target="netstandardtask" />
