--- a/SampleWeaver/SampleWeaver.csproj
+++ b/SampleWeaver/SampleWeaver.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <!-- This is just to test FodyPackaging, use local output path -->
     <PackageOutputPath>$(ProjectDir)bin</PackageOutputPath>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <Import Project="..\FodyPackaging\build\FodyPackaging.props" />
