--- a/SampleWeaver/SampleWeaver.csproj
+++ b/SampleWeaver/SampleWeaver.csproj
@@ -12,4 +12,8 @@
   </PropertyGroup>
 
   <Import Project="..\FodyPackaging\build\FodyPackaging.targets" />
+
+  <ItemGroup>
+    <ProjectReference Include="..\SampleWeaver.Fody\SampleWeaver.Fody.csproj" ReferenceOutputAssembly="false" />
+  </ItemGroup>
 </Project>
